fix: arrow alignment

--- a/packages/components/src/components/carousel/carousel.css
+++ b/packages/components/src/components/carousel/carousel.css
@@ -48,6 +48,7 @@
   z-index: 99;
   justify-content: center;
   display: flex;
+  align-items: center;
 }
 
 .carousel--vertical .carousel__arrow {
